# unicode-cli

./: Cargo.toml  LICENSE.md  README.md  build.rb
data/: Makefile  blocks.rs  build.rb
src/: data.rs  lib.rs  main.rs
