[package]
name = "unicode-cli"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"
description = "Unicode character lookup and inspection tool."
license = "MIT"
repository = "https://github.com/xfbs/unicode-cli"

[dependencies]
unicode_names2 = "0.2.2"
clap = "2.33.0"
unic-ucd = "0.9.0"
regex = "1.1.7"
log = "0.4.6"
stderrlog = "0.4.1"
